--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "struct.h": "c",
         "stdbool.h": "c",
         "windows.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "canattack.h": "c",
+        "unitdeplacement.h": "c"
     }
 }
